--- a/src/main/webapp/styles/signup-styles.css
+++ b/src/main/webapp/styles/signup-styles.css
@@ -2,6 +2,10 @@
 body{
     font-family: "Roboto", sans-serif;
 }
+*{
+    margin: 0;
+    padding: 0;
+}
 .signup-heading{
     text-align: center;
     font-size: 2.5rem;
@@ -19,7 +23,7 @@ body{
 }
 
 .form{
-    width: 60%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,5 +42,24 @@ body{
 .form-control input{
     padding: 0.5rem 1rem;
     color: #333333;
-    width: 60%;
+}
+
+.form-control input::placeholder{
+    color: #555555;
+}
+
+.submit-btn{
+    background-color: #0077FF;
+    color: #eee;
+    font-weight: normal;
+    font-size: 1rem;
+    padding: 1rem 1.5rem;
+    border-radius: 20rem;
+    border: none;
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+.submit-btn:hover{
+    filter: brightness(90%);
 }
